Centramos los campos del login

--- a/login.html
+++ b/login.html
@@ -7,10 +7,10 @@
     <title>RetBe</title>
 </head>
 <body background="img/photo-1511300636408-a63a89df3482.jpeg" style="background-repeat:no-repeat; background-position: down ;background-size:100%;">
-    <form>
-
-        <input id="txtCorreo" type="text" placeholder="Usuario" >
-        <input id="txtContrasenna" type="password" placeholder="Contraseña" >
+    <form style="text-align: center;">
+        <h3 style="color: white; font-family: 'Courier New', Courier, monospace;">Login</h3>
+        <input id="txtCorreo" type="text" placeholder="Usuario" style="margin-bottom: 10px" ><br>
+        <input id="txtContrasenna" type="password" placeholder="Contraseña" style="margin-bottom: 10px"><br>
         <input id="btnIngresar" type="button" value="Confirmar">
     </form>
     <script src="login.js"></script>
