ajustamos iconos escritorio

--- a/escritorio.html
+++ b/escritorio.html
@@ -9,42 +9,30 @@
 </head>
 <body background="img/photo-1511300636408-a63a89df3482.jpeg" style="background-repeat:no-repeat; background-position: down; background-size: 2200px;">
     <a href="google.html">
-        <img style="width: 40px;border-radius: 10%;translate :10px;" src="img/google.png">
+        <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
     </a>
-    <h5 style="color: white;translate: 5px;" >Google</h5>
+    <h5 style="color: white;translate: 15px;" >Google</h5>
     <a href="https://www.google.com/intl/es/gmail/about/">
-        <img style="width: 40px;border-radius: 10%; translate: 10px;" src="img/gmail.png">
+        <img style="width: 40px;border-radius: 10%; translate: 20px;" src="img/gmail.png">
     </a>
-    <h5 style="translate: 10px;color: white;">Gmail</h5>
+    <h5 style="translate: 18px;color: white;">Gmail</h5>
     <a href="https://www.youtube.com">
-        <img style="width: 40px;border-radius: 10%; translate: 10px;" src="img/youtube.png">
+        <img style="width: 40px;border-radius: 10%; translate: 20px;" src="img/youtube.png">
     </a>
-    <h5 style="translate: 2px; color: white;">YouTube</h5>
+    <h5 style="translate: 10px; color: white;">YouTube</h5>
     <a href="archivos.html">
-        <img style="width: 40px; translate:10px;border-radius: 10%;" src="img/archivos.jpeg">
+        <img style="width: 40px; translate:20px;border-radius: 10%;" src="img/archivos.jpeg">
     </a>
-    <h5 style="color: white;">Archivos</h5>
+    <h5 style="color: white; translate:11px;">Archivos</h5>
     <a href="editor-de-texto.html">
-        <img style="width: 45px;translate: 8px;border-radius: 10%;" src="img/editor-de-texto.jpeg">
+        <img style="width: 45px;translate: 20px;border-radius: 10%;" src="img/editor-de-texto.jpeg">
     </a>
     <h5 style="color: white;">Editor de texto</h5>
     <a href="Escupitera Mail Web/login.html">
-        <img style="width:55px; translate:10px;border-radius: 10%;" src="img/escupitera-mail.jpeg">
+        <img style="width:55px; translate:20px;border-radius: 10%;" src="img/escupitera-mail.jpeg">
     </a>
     <h5 style="color:white;" >Escupitera Mail</h5>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <p style="background-color:white;">
     <a href="version.html">
         <img style="width: 30px;border-radius: 10%;" src="img/ajustes.jpeg">
