Errores en las imagenes

--- a/Escupitera Mail Web/cuenta.html
+++ b/Escupitera Mail Web/cuenta.html
@@ -9,6 +9,6 @@
 <body>
     <input type="button" onclick="history.back()" name="volver atrás" value="<---">
     <h2 style="translate: 750px">Sin iniciar sesion</h2> 
-    <img style="translate: 800px" src="/img/índice.png">
+    <img style="translate: 800px" src="img/índice.png">
 </body>
 </html>
