--- a/Escupitera Mail Web/inicio.html
+++ b/Escupitera Mail Web/inicio.html
@@ -9,7 +9,7 @@
 <body>
         <h1>Escupitera Mail</h1> 
         <a href="cuenta.html">
-        <img style="translate:1750px;" src="/img/índice.png" width="40px"> 
+        <img style="translate:1750px;" src="img/índice.png" width="40px"> 
     </a>
     <h4 style="translate:1730px;">Tu cuenta</h4>
     <br>
