Cambio font-family

--- a/escritorio.html
+++ b/escritorio.html
@@ -7,7 +7,7 @@
     <script src="main.js"></script>
     <title>RetBe</title>
 </head>
-<body background="img/photo-1511300636408-a63a89df3482.jpeg" style="background-repeat:no-repeat; background-position: down; background-size: 2200px;">
+<body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down; background-size: 2200px;">
     <a href="google.html">
         <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
     </a>
@@ -15,7 +15,7 @@
     <a href="https://www.google.com/intl/es/gmail/about/">
         <img style="width: 40px;border-radius: 10%; translate: 20px;" src="img/gmail.png">
     </a>
-    <h5 style="translate: 18px;color: white;">Gmail</h5>
+    <h5 style="translate: 20px;color: white;">Gmail</h5>
     <a href="https://www.youtube.com">
         <img style="width: 40px;border-radius: 10%; translate: 20px;" src="img/youtube.png">
     </a>
