--- a/google.html
+++ b/google.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BetBe</title>
 </head>
-<body>
+<body style="font-family: 'Courier New', Courier, monospace;">
     <input type="button" onclick="history.back()" name="volver atrás" value="X">
     <a href="https://www.google.com/">
         <p style="color:black;translate:1700px;">Ir a Google</p>
