--- a/editor-de-texto.html
+++ b/editor-de-texto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetBe</title>
 </head>
-<body>
+<body style="font-family: 'Courier New', Courier, monospace;">
     <input type="button" onclick="history.back()" name="volver atrás" value="X">
     <br>
     <br>
