--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetBe</title>
 </head>
-<body background="img/photo-1511300636408-a63a89df3482.jpeg" style="background-repeat:no-repeat; background-position: down ;background-size:100%;">
+<body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down ;background-size:100%;">
     <form style="text-align: center;">
         <h3 style="color: white; font-family: 'Courier New', Courier, monospace;">Login</h3>
         <input id="txtCorreo" type="text" placeholder="Usuario" style="margin-bottom: 10px" ><br>
