--- a/escritorio.html
+++ b/escritorio.html
@@ -32,6 +32,10 @@
         <img style="width:55px; translate:20px;border-radius: 10%;" src="img/escupitera-mail.jpeg">
     </a>
     <h5 style="color:white;" >Escupitera Mail</h5>
+    <a href="Escupi App/inicio.html">
+        <img style="width:55px; translate:20px;border-radius: 10%;" src="Escupi App/Sin título.jpeg">
+    </a>
+    <h5 style="color:white; translate: 10px;">Escupitera</h5>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
     <p style="background-color:white;">
     <a href="version.html">
