Cambios en Escupitera Mail

--- a/Escupitera Mail Web/EscupiteraMail-4.html
+++ b/Escupitera Mail Web/EscupiteraMail-4.html
@@ -8,13 +8,7 @@
 </head>
 <body>
     <input type="button" onclick="history.back()" name="volver atrás" value="<---">
-    <p>Nueva actualizacion 1.2
-        <br>
-        ·Decoraremos y daremos estilo a nuestro Mail
-        <br>
-        ·Eliminaremos "Dudas de siempre"
-        <br>
-        ·Añadiremos "Preguntas en persona"
-    </p>
+    <h4>No hay actualizaciones programadas</h4>
+    <h4>Error 0000EM4HTML</h4>
 </body>
 </html>
