--- a/Escupi App/notas.html
+++ b/Escupi App/notas.html
@@ -22,6 +22,8 @@
         }
     </style>
     <h3>Notas</h3>
-    <h4>Aun no hay notas</h4>
+    <a href="20-24.html">
+        <h4>Del 20 al 24 de Marzo</h4>
+    </a>
 </body>
 </html>
