crea una cuenta

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetBe</title>
 </head>
+<style>
+    a {
+        color:chartreuse;
+    }
+
+    p {
+        text-align: center;
+    }
+</style>
 <body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down ;background-size:100%;">
     <form style="text-align: center;">
         <h3 style="color: white; font-family: 'Courier New', Courier, monospace;">Login</h3>
@@ -13,7 +22,10 @@
         <input id="txtContrasenna" type="password" placeholder="Contraseña" style="margin-bottom: 10px"><br>
         <input id="btnIngresar" type="button" value="Confirmar">
     </form>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmCw45dq9AS3ae7Ut-7CnhpRZ0kKqWIJ0XwORdiquEfIifwQ/viewform">
+        <p>Crear una cuenta</p>
+    </a>
     <script src="login.js"></script>
- 
+    
 </body>
 </html>
