Descarga la app

--- a/version.html
+++ b/version.html
@@ -61,7 +61,8 @@
                                                       <br>
                                                    23/3/23
                                                        <br>
-                                                    Version 1.7
+                                                    Version 1.7 -- <a href="rtb.zip" download>
+                                                    Descargar Zip</a>
         </p>
 </body>
 </html>
