--- a/version.html
+++ b/version.html
@@ -62,7 +62,12 @@
                                                    23/3/23
                                                        <br>
                                                     Version 1.7 -- <a href="rtb.zip" download>
-                                                    Descargar Zip</a>
+                                                    Descargar Zip</a> -- <a href="informacion.html">Como funciona</a>
+                                                    <style>
+                                                        a {
+                                                            color: blue;
+                                                        }
+                                                    </style>
         </p>
 </body>
 </html>
