--- a/informacion.html
+++ b/informacion.html
@@ -20,12 +20,9 @@
         <br>
         3.
         <br>
-        Abre la carpeta y ejecuta el archivo llamado RetBe
+        Abre la carpeta y ejecuta el archivo llamado Retbe.exe
         <br>
-        <br>
-        Advertencia:
-        <br>
-        Solo funciona en linux
+        Si estas en Linux ejecuta el archivo llamado Retbe
     </p>
     <style>
         body {
