--- a/editor-de-texto.html
+++ b/editor-de-texto.html
@@ -7,29 +7,16 @@
     <title>RetBe</title>
 </head>
 <body style="font-family: 'Courier New', Courier, monospace;">
+    <style>
+        textarea {
+            width: 99%;
+            height: 800px;
+        }
+    </style>
     <input type="button" onclick="history.back()" name="volver atrás" value="X">
     <br>
     <br>
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 1
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 2
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 3
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 4
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 5
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 6
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 7
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 8
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 9
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 10
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 11
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 12
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 13
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 14
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 15
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 16
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 17
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 18
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 19
-   <input style="width: 1500px;" class="controls"type="text" name="#" value="" > 20
+   <textarea id="text"></textarea>
     <h5>Nota: todo lo que escribas al cerrar la app se perdera</h5>
 </body>
 </html>
