--- a/escritorio.html
+++ b/escritorio.html
@@ -8,6 +8,40 @@
     <title>RetBe</title>
 </head>
 <body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down; background-size: 2200px;">
+    <style>
+        .reloj { width: 150px; height: 30px; padding: 5px 10px; border: 3px solid black;
+         font: bold 1.5em dotum, "lucida sans", arial; 
+         text-align: center;
+         /*float: right;*/ margin: 0 auto; }
+    </style>
+    <script>
+        function actual() {
+         fecha=new Date(); //Actualizar fecha.
+         hora=fecha.getHours(); //hora actual
+         minuto=fecha.getMinutes(); //minuto actual
+         segundo=fecha.getSeconds(); //segundo actual
+         if (hora<10) { //dos cifras para la hora
+            hora="0"+hora;
+            }
+         if (minuto<10) { //dos cifras para el minuto
+            minuto="0"+minuto;
+            }
+         if (segundo<10) { //dos cifras para el segundo
+            segundo="0"+segundo;
+            }
+         //ver en el recuadro del reloj:
+         mireloj = hora+" : "+minuto+" : "+segundo;	
+				 return mireloj; 
+         }
+function actualizar() { //función del temporizador
+   mihora=actual(); //recoger hora actual
+   mireloj=document.getElementById("reloj"); //buscar elemento reloj
+   mireloj.innerHTML=mihora; //incluir hora en elemento
+	 }
+setInterval(actualizar,1000); //iniciar temporizador
+    </script>
+    <div id="reloj" class="reloj">00 : 00 : 00
+    </div>    
     <a href="google.html">
         <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
     </a>
@@ -36,7 +70,7 @@
         <img style="width:55px; translate:20px;border-radius: 10%;" src="Escupi App/Sin título.jpeg">
     </a>
     <h5 style="color:white; translate: 10px;">Escupitera</h5>
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br>
     <p style="background-color:white;">
     <a href="version.html">
         <img style="width: 30px;border-radius: 10%;" src="img/ajustes.jpeg">
