--- a/foto.html
+++ b/foto.html
@@ -9,6 +9,7 @@
 <body style="font-family: 'Courier New', Courier, monospace;">
     <input type="button" onclick="history.back()" name="volver atrás" value="X">
     <br>
-    <img style="width: 900px;translate: 450px;" src="img/foto.jpeg">
+    <br>
+    <img style="width: 76%;" src="img/foto.jpeg">
 </body>
 </html>
