--- a/version.html
+++ b/version.html
@@ -61,8 +61,8 @@
                                                       <br>
                                                    15/4/23
                                                        <br>
-                                                    Version 1.8 -- <a href="rtb.zip" download>
-                                                    Descargar Zip</a> -- <a href="informacion.html">Como funciona</a>
+                                                    Version 1.9 -- <a href="rtb-linux.zip" download>
+                                                    Descargar Zip Para Linux</a> -- <a href="rtb-windows.zip" download>Descargar Zip Para Windows</a> -- <a href="informacion.html">Como funciona</a>
                                                     <style>
                                                         a {
                                                             color: blue;
