--- a/escritorio.html
+++ b/escritorio.html
@@ -17,6 +17,10 @@
          #fecha {
             text-align:center;
          }
+
+         .align {
+            float: right;
+         }
     </style>
     <script>
         function actual() {
@@ -53,10 +57,17 @@ setInterval(actualizar,1000); //iniciar temporizador
         document.write(date);
         </script>
         </div>
+        <br>
+        <a class="align" href="commander/index.html">
+            <img style="width:40px; border-radius: 10%;" src="img/Firefox_wallpaper.png">
+        </a>
+        <br>
+        <br>
+        <h5 class="align" style="color:white; translate: 55px;">Commander</h5>
     <a href="google.html">
         <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
     </a>
-    <h5 style="color: white;translate: 15px;" >Google</h5>
+    <h5 style="color: white; translate: 15px;" >Google</h5>
     <a href="https://www.google.com/intl/es/gmail/about/">
         <img style="width: 40px;border-radius: 10%; translate: 20px;" src="img/gmail.png">
     </a>
@@ -81,7 +92,7 @@ setInterval(actualizar,1000); //iniciar temporizador
         <img style="width:55px; translate:20px;border-radius: 10%;" src="Escupi App/Sin título.jpeg">
     </a>
     <h5 style="color:white; translate: 10px;">Escupitera</h5>
-    <br><br><br><br><br>
+    <br>
     <p style="background-color:white;">
     <a href="version.html">
         <img style="width: 30px;border-radius: 10%;" src="img/ajustes.jpeg">
