--- a/commander/index.html
+++ b/commander/index.html
@@ -15,6 +15,7 @@
         #comando {
             width: 20%;
             border-radius: 10px;
+            
         }
 
         #action {
@@ -24,6 +25,10 @@
     </style>
 </head>
 <body id="cuerpo">
+    <div>
+    <input type="button" onclick="history.back()" name="volver atrás" id="atras" value="X">
+    </div>
+    <br>
     <div>
         <input id="comando" type="text" placeholder="Comando:"> 
     </div>
