--- a/escritorio.html
+++ b/escritorio.html
@@ -58,12 +58,14 @@ setInterval(actualizar,1000); //iniciar temporizador
         </script>
         </div>
         <br>
-        <a class="align" href="commander/index.html">
-            <img style="width:40px; border-radius: 10%;" src="img/Firefox_wallpaper.png">
+        <div class="align">
+        <a href="commander/index.html">
+            <img class="align" style="width:40px; border-radius: 10%;" src="img/Firefox_wallpaper.png">
         </a>
         <br>
         <br>
-        <h5 class="align" style="color:white; translate: 55px;">Commander</h5>
+        <h5 style="color:white; translate: 16px;">Commander</h5>
+    </div>
     <a href="google.html">
         <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
     </a>
