--- a/escritorio.html
+++ b/escritorio.html
@@ -20,6 +20,7 @@
 
          .align {
             float: right;
+            color:white;
          }
     </style>
     <script>
@@ -65,6 +66,11 @@ setInterval(actualizar,1000); //iniciar temporizador
         <br>
         <br>
         <h5 style="color:white; translate: 16px;">Commander</h5>
+        <br>
+        <a href="paint.html">
+            <img style="width:45px; border-radius: 10%; translate: 26px;" src="icono.jpeg">
+        </a>
+        <h5 style="translate: 29px;">Paint</h5>
     </div>
     <a href="google.html">
         <img style="width: 40px;border-radius: 10%;translate:20px;" src="img/google.png">
