--- a/version.html
+++ b/version.html
@@ -7,7 +7,7 @@
     <title>RetBe</title>
 </head>
 <body style="font-family: 'Courier New', Courier, monospace;">
-    <p style="background-color: cornflowerblue;">
+    <p style="background-color: rgb(45, 73, 233);">
         <input type="button" onclick="history.back()" name="volver atrás" value="X">
         <br>
          <br>
@@ -61,13 +61,19 @@
                                                       <br>
                                                    15/4/23
                                                        <br>
-                                                    Version 1.11 -- <a href="rtb-linux.zip" download>
+                                                    Version 1.12 -- <a href="rtb-linux.zip" download>
                                                     Descargar Zip Para Linux</a> -- <a href="rtb-windows.zip" download>Descargar Zip Para Windows</a> -- <a href="informacion.html">Como funciona</a>
-                                                    <style>
-                                                        a {
-                                                            color: blue;
-                                                        }
-                                                    </style>
         </p>
 </body>
 </html>
+
+<style>
+    a {
+        text-decoration: none;
+        color:white
+    }
+
+    p {
+        color: white;
+    }
+</style>
