--- a/index.html
+++ b/index.html
@@ -7,61 +7,40 @@
     <title>RetBe</title>
 </head>
 <style>
-    #txtCorreo {
-        height: 30px;
-        border: none;
-        border-bottom: 2px solid;
-        background-color: rgba(224, 18, 18, 0);
-        border-right: 2px solid;
+    body {
+        background-color: black;
+        color: white;
     }
-
-    #txtContrasenna {
-        height: 30px;
-        border: none;
-        border-bottom: 2px solid;
-        background-color: rgba(224, 18, 18, 0);
-        border-right: 2px solid;
+    #spinner-bola {
+       text-align: center;
     }
-
-    #txt {
-        padding-right: 80px;
-    }
-
-    #txt2 {
-        padding-right: 90px;
-    }
-
-    #btnIngresar  {
-        height: 40px;
-        width: 100px;
-        background-color: rgba(224, 18, 18, 0);
-        border: none;
-        border-bottom: 2px solid;
-        border-right: 2px solid;
-    }
-
-    h4 {
+    #titulo {
+        
         text-align: center;
-        color: black;
+        font-size: 70px;
+    }
+    #cargando {
+        text-align: center;
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        margin-left: -25px;
     }
 
-    a {
-        text-decoration: none;
+    #cargando > img {
+        width: 50px;
+        height: 50px;
     }
 </style>
-<body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down ;background-size:100%;">
-    <form class="form" style="text-align: center;">
-        <!--<h3 style="color: white; font-family: 'Courier New', Courier, monospace;">Login</h3>--><br>
-        <p id="txt2">Usuario:</p>
-        <input id="txtCorreo" type="text" style="margin-bottom: 10px">
-        <p id="txt">Contraseña:</p>
-        <input id="txtContrasenna" type="password" style="margin-bottom: 10px"><br><br>
-        <input id="btnIngresar" type="button" value="Confirmar">
-    </form>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSe0IkC90FErV6g11RlcVz1PL1gCa0wFit4jXn72kkw9dFJhhg/viewform">
-        <h4>Crear una cuenta</h4>
-    </a>
-    <script src="login.js"></script>
-    
+<body>
+    <div id="spinner-bola">
+        <img src="img/spinner-bola.gif">
+    </div>
+    <h3 id="titulo">RETBE</h3>
+    <div id="cargando">
+        <img src="img/spinner-eclipse.gif" ><br/>
+        Cargando
+    </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
