--- a/escritorio.html
+++ b/escritorio.html
@@ -105,6 +105,9 @@ setInterval(actualizar,1000); //iniciar temporizador
     <a href="version.html">
         <img style="width: 30px;border-radius: 10%;" src="img/ajustes.jpeg">
     </a>
+    <a href="index.html">
+        <img style="width: 40px;border-radius: 10%;" src="img/apagar.png">
+    </a>
     </p>
 </body>
 </html>
