--- a/Win10/index.html
+++ b/Win10/index.html
@@ -15,7 +15,7 @@
     </div>
     <script>
         function windowsFunction() {
-    window.location.href = 'usuario.html'
+    window.location.href = 'anteusuario.html'
 }
 setTimeout(windowsFunction, 7000);
     </script>
