--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         width: 15px;
         height: 15px;
     }
+    #boot {
+    position:absolute;
+    bottom:5px;
+}
 </style>
 <body>
     <div id="spinner-bola">
@@ -47,6 +51,7 @@
         <img src="img/Spin-1s-200px.gif" >
         
     </div>
+    <a id="boot" href="boot.html">Recovery mode</a>
     <script src="js/index.js"></script>
 </body>
 </html>
