--- a/login.html
+++ b/login.html
@@ -59,13 +59,16 @@
 </style>
 <body background="img/photo-1511300636408-a63a89df3482.jpeg" style="font-family: 'Courier New', Courier, monospace; background-repeat:no-repeat; background-position: down ;background-size:100%;">
     <dialog id="modal" open>
-        <h3>Novedades 1.15</h3>
-        ·Hemos facilitado el inicio de sesión
+        <h3>Novedades 1.16</h3>
+        ·Hemos añadido el Recovery mode
         <br>
-        para que podamos iniciar sesion mas facil
+        Tienes varias opciones,
         <br>
+        reiniciar la web
         <br>
-        ·Hemos añadido un par de usuarios 
+        resetear la web
+        <br>
+        o ver informacion sobre la web
         <br>
         <br>
         <button onclick="window.modal.close();">Cerrar</button>
