--- a/boot.html
+++ b/boot.html
@@ -13,6 +13,15 @@
     <a class="xd" href="reset.html">Factory reset</a>
     <br>
     <a class="xd" href="information_recovery.html">Information</a>
+    <br>
+    <button onclick="window.modal.open();">Run Windows 10</button>
+    <dialog>
+        <h3>Se ha producido un error y "win_10_execution_x64.iso" 
+            <br>
+            no se ha ejecutado correctamente
+        </h3>
+        <button onclick="window.modal.close();">Cerrar</button>
+    </dialog>
     <style>
         body {
            background-color: black; 
